crates/biome_cli/tests/snapshots/main_cases_reporter_json/reports_diagnostics_json_format_command.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --reporter=json-pretty main.ts index.ts
```

## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
The `json` and `json-pretty` reporters are experimental and may change in patch releases.
```

```block
{
	"summary": {
		"changed": 0,
		"unchanged": 2,
		"matches": 0,
		"duration": "<TIME>",
		"errors": 2,
		"warnings": 0,
		"infos": 0,
		"skipped": 0,
		"suggestedFixesSkipped": 0,
		"diagnosticsNotPrinted": 0,
		"scannerDuration": "<TIME>"
	},
	"diagnostics": [
		{
			"severity": "error",
			"message": "Formatter would have printed the following content:",
			"category": "format",
			"location": {
				"path": "index.ts",
				"start": { "line": 0, "column": 0 },
				"end": { "line": 0, "column": 0 }
			},
			"advices": []
		},
		{
			"severity": "error",
			"message": "Formatter would have printed the following content:",
			"category": "format",
			"location": {
				"path": "main.ts",
				"start": { "line": 0, "column": 0 },
				"end": { "line": 0, "column": 0 }
			},
			"advices": []
		}
	],
	"command": "format"
}

```
